2013-01-05  Dan Espen  <despen@verizon.net>

	* documentation/faq/faq2php: Add emacs compile-command that works on my setup.
	* index.php: Regenerate for Wine issue.

2012-02-01  Thomas Adam <thomas@fvwm.org>
	* authors/index.php:
	* news/index.php:
	* doc/stable:
	* index.php:
	* documentation/manpages/stable:
	Regenerated for 2.6.5 release.

2012-02-09  Thomas Adam <thomas@fvwm.org>
	* index.php:
	Fix syntax.

2012-02-02  Thomas Adam <thomas@fvwm.org>
	* index.php:
	Auto-generate NEWS section.

2012-02-01  Thomas Adam <thomas@fvwm.org>
	* authors/index.php:
	* news/index.php:
	* doc/stable:
	* index.php:
	* documentation/manpages/stable:
	Regenerated for 2.6.4 releae.

2011-12-10  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Axelle-Apvrille-1024x640:
	Added screenshot.

2011-10-26  Thomas Adam <thomas@fvwm.org>
	* freenode.txt:
	Removed now that group verification complete.

2011-10-25  Thomas Adam <thomas@fvwm.org>
	* freenode.txt:
	Added Freenode verification file for group registrations

	"As part of the verification process for your GRF-f request, please
	upload a static plain-text file to http://www.fvwm.org/freenode.txt with
	the contents "aoisenfto3ib45i3ub&T*T&", and let me know when you've done
	so."

2011-10-07  Thomas Adam <thomas@fvwm.org>
	* links.php:
	Corrected link to zensites.

2011-09-30  Thomas Adam <thomas@fvwm.org>
	* authors/index.php:
	* news/index.php:
	* doc/stable:
	* index.php:
	* documentation/manpages/stable:
	Regenerated for 2.6.3 releae.

2011-08-06  Thomas Adam <thomas@fvwm.org>
	* authors/index.php:
	* news/index.php:
	* doc/stable:
	* documentation/manpages/stable:
	Regenerated for 2.6.2 releae.

2011-07-04  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Helmuth_Schmelzer-1366x768:
	Added screenshot.

2011-06-04  Thomas Adam <thomas@fvwm.org>
	* index.php:
	* download/index.php:
	* definitions.inc:
	Remove references to an unstable FVWM version

	This concept no longer exists in FVWM.
